feat: implement pull model for API
